[package]
name = "rlt-poc"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "http_hyper"
path = "./src/http_hyper.rs"

[dependencies]
hyper-util = { version = "0.1", features = [
    "client",
    "client-legacy",
    "http1",
    "tokio",
] }
reqwest = "0.12"
rlt = "0.1.1"
tokio = { version = "1.38", features = ["full"] }
anyhow = "1.0"
async-trait = "0.1"
bytes = "1.1"
clap = { version = "4.5", features = ["derive"] }
http-body-util = "0.1"
hyper = { version = "1.2", features = ["client"] }
hyper-tls = "0.6"
